# namada

./: Cargo.toml  flake.nix
crates/airdrop/: Cargo.toml
crates/airdrop/src/: lib.rs  storage.rs  storage_key.rs  utils.rs  vp.rs
crates/airdrop/src/vp/: error.rs  mod.rs  orchard.rs  sapling.rs
crates/apps/: Cargo.toml
crates/apps_lib/src/: cli.rs
crates/node/src/shell/: init_chain.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: airdrop_claim.rs  args.rs  error.rs  lib.rs  rpc.rs  tx.rs
crates/tx/: Cargo.toml
crates/tx/src/: action.rs
crates/tx/src/data/: airdrop.rs  mod.rs
crates/tx/src/data/airdrop/: mod.rs  util.rs
crates/tx_prelude/src/: airdrop.rs
nix/pkgs/: default.nix
wasm/: Cargo.toml  Makefile
wasm/tx_claim_airdrop/: Cargo.toml
wasm/tx_claim_airdrop/src/: lib.rs
